--- a/TodoApp/package.json
+++ b/TodoApp/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^3.6.4",
     "mongoose": "^6.0.5",
+    "multer": "^1.4.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
