--- a/TodoApp/package.json
+++ b/TodoApp/package.json
@@ -14,10 +14,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongodb": "^3.6.4",
+    "mongodb": "^3.7.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.2.0"
   }
 }
